refactor: :recycle: 错误状态码重构为全局错误码（http状态码）&业务错误码（业务方自定义，只提供接口定义）